comiteando cambios finales de footer

--- a/index.html
+++ b/index.html
@@ -55,43 +55,47 @@
       </div>
 
       <div class="best-of-the-year">
-        <h3>Get to know the best<br> team of the year<br></h3>
+        <h3>Get to know the best<br>teams of the year<br></h3>
         <button>Go for it</button>
       </div>
     </main>
 
     <footer>
-      <div class="formulario">
-        <form class="search-box" action="#" method="POST">
-          <input class="search-bar" type="text" name="busqueda" placeholder="Update in your inbox...">
-          <input class="search-button" type="submit" value="Go">                  
-        </form>
-      </div>
+      <div class="footer-conteiner">
+          <div class="link-redes">
+            <div class="iconos-redes">
+              <img src="./img/icon-facebook.svg" alt="">
+              <img src="./img/icon-youtube.svg" alt="">
+              <img src="./img/icon-twitter.svg" alt="">
+              <img src="./img/icon-pinterest.svg" alt="">
+              <img src="./img/icon-instagram.svg" alt=""> 
+            </div>
+            <div class="footer-logo">
+              <img src="./img/logo.svg" alt="">
+            </div>
+          </div>
+
+          <section class="footer-nav">
+            <ul>
+              <li><a>Home</a></li>
+              <li><a>Pricing</a></li>
+              <li><a>Products</a></li>
+              <li><a>About Us</a></li>
+            </ul>
+            <ul>
+              <li><a>Training</a></li>
+              <li><a>Community</a></li>
+              <li><a>Privacy Policy</a></li>
+            </ul>
+          </section>
         
-      <section class="footer-nav">
-        <ul>
-          <li><a>Home</a></li>
-          <li><a>Pricing</a></li>
-          <li><a>Products</a></li>
-          <li><a>About Us</a></li>
-        </ul>
-        <ul>
-          <li><a>Training</a></li>
-          <li><a>Community</a></li>
-          <li><a>Privacy Policy</a></li>
-        </ul>
-      </section>
-      <div class="link-redes">
-        <div class="iconos-redes">
-          <img src="./img/icon-facebook.svg" alt="">
-          <img src="./img/icon-youtube.svg" alt="">
-          <img src="./img/icon-twitter.svg" alt="">
-          <img src="./img/icon-pinterest.svg" alt="">
-          <img src="./img/icon-instagram.svg" alt=""> 
+        <div class="formulario">
+          <form class="search-box" action="#" method="POST">
+            <input class="search-bar" type="text" name="busqueda" placeholder="Update in your inbox...">
+            <input class="search-button" type="submit" value="Go">                  
+          </form>
         </div>
-        <div class="footer-logo">
-          <img src="./img/logo.svg" alt="">
-        </div>
+        
       </div>
       <div class="copyright">
         <p >Copyright 2020. All Rights Reserved</p> 
